# futility

./: .gitignore  Cargo.toml  README.md
examples/: terminate.rs
futility-try-catch/: Cargo.toml  README.md
futility-try-catch/src/: lib.rs
src/: lib.rs  terminate.rs
tests/: terminate.rs
